--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,9 +1,14 @@
 html,body {
     background-color: rgb(223, 223, 37);
-    width: 100vw;
-    height: 100vw;
 }
 
+
+@media (min-width: 540px) {
+    html, body {
+        background-color: rgb(212, 211, 211);
+        margin: 0;
+    }
+}
 
 
 @media (min-width: 330px) {
